--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,80 +1,81 @@
-#header{
-    background-size: cover;
-    background-position-y: 40%;
-    color:white;
-    background-color:rgb(83, 83, 83);
-    position:relative !important;
-}
-
-/* h1 style for city name */
-#header h1{
-    font-size: 400%;
+/* Header styles */
+#header {
+    background-color: #b41010; /* Light gray background */
+    padding: 15rem;
     text-align: center;
-    text-transform: uppercase;
-    font-weight: bold;
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    background-clip: text;
-    text-shadow: 0px 3px 3px rgba(255,255,255,0.5);
+    height: 100%;
 }
 
-/*Jumbotron padding and border */
-.jumbotron {
-    padding: 1rem;
-    border-radius: 0;
+#header-text {
+   
+    font-size: "15rem","bold";
+    color: #230eac; /* Change color as needed */
+    background-color: #1c67b2;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; 
+    font-style: italic;
 }
 
-/* City Search width */
-#search-city{
-    width:80%;
+
+#artist-credit {
+    font-size: 0.8rem; /* Change font size as needed */
+    color: #a81212; /* Change color as needed */
+    background-color: #63db27c1;
 }
 
-/* fontawesome magnifying glass icon */
-#search-button-icon{
-    width:15px;
-    display:inline-block;
+/* Search city input styles */
+#search-city {
+    width: 100%;
+    border-radius: 0; /* Remove border radius */
+    background-color: #210faa;
+    color:#7590a3;
+    font-style: italic;
+    font-size: 25px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    background-color: #210faa;
 }
 
-/*Current weather padding */
-#current-weather {
-    padding-left: 15px;
+/* City results list styles */
+#city-results {
+    list-style-type: none; /* Remove list bullet points */
+    margin-top: 1.6rem;
+    background-color: #0c139c;
+    color:#7590a3;
+    font-style: italic;
+    font-size: 25px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: #210faa;
 }
 
-/* clear storage below list of cities */
-#clear-storage{
-    color:grey;
+/* Clear storage link styles */
+#clear-storage {
+    color:#589917;
     text-decoration: none;
-    font-size:.75em;
-    margin: .5em 0em 0em .5em;
+    font-size: 25px;
+    display: block;
+    margin-top: 1.6rem;
+    background-color: #12579c;
 }
 
-/* Weather card styling */
-.weather-card{
-    width: 9rem;
-    background-color: #0275d8;
-    color: white;
-    text-align: center;
+/* Content right styles */
+#content-right {
+    padding-top: 1.6rem;
+    color: #0c139c;
 }
 
-/* UV coloring scheme for UV display */
-.uv-favorable{
-    background-color: green;
-    border-radius: 5px;
-    color: white;
+/* Current weather container styles */
+#current-weather {
+    background-color: #c36b14; /* Light gray background */
+    border:#a210a2; /* Border color */
+    border-radius: 0.25rem; /* Border radius */
+    padding: 1rem; /* Padding */
 }
 
-.uv-moderate{
-    background-color: orange;
-    border-radius: 5px;
-    color: white;
+/* Five day forecast container styles */
+#five-day-forecast {
+    background-color: #c36b14; /* Light gray background */
+    margin-top: 25px; /* Margin top */
+    color-scheme: height;
 }
-
-.uv-severe{
-    background-color: red;
-    border-radius: 5px;
-    color: white;
-}
-
 /* Media queries */
 @media only screen and (max-width: 992px) {
     #search-city{
@@ -85,7 +86,7 @@
     }
 }
 @media only screen and (max-width: 575px) {
-
     #fiveDayForecastUl{
         justify-content: center;
     }
+}
